# MGA-Dashboard

./: .gitattributes  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/data/: generation_over_snapshots.pkl  installed_capacity_xr.pkl  manifest.json  points.pkl
backend/mgaserver/: api_models.py  config.py  core.py  main.py  schemes.py
backend/tests/: conftest.py  test_core.py  test_endpoints.py
frontend/: .gitignore  Dockerfile  nginx.conf.template
frontend/src/: App.vue  index.html
frontend/src/components/: Navigate.vue  TutorialModal.vue
frontend/src/components/navigate/: MessageBox.vue  PriorityItem.vue
frontend/src/components/traverse/: Chart.vue  Slider.vue
frontend/src/shared/: numberFormat.js
