[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
testpaths = ["tests"]
pythonpath = ["."]

[project]
name = "mgaserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "linopy>=0.6.7",
    "pandera>=0.31.1",
    "pypsa>=1.2.0",
    "pytest>=9.0.3",
]
